Bug 1705446 - Fix Firefox pref names in WasmFeatures.  r=rhunt

The features rewrite got the names of the Firefox wasm prefs wrong, they
all have a wasm_ prefix that got chopped off.  This puts it back.

It sucks that we don't have meaningful test cases for this.  A manual
test case (see bug) is easy, but how to automate it?

Differential Revision: https://phabricator.services.mozilla.com/D112325