js/xpconnect/src/XPCJSContext.cpp
@@ -920,7 +920,7 @@ static void ReloadPrefsCallback(const char* pref, void* aXpccx) {
 
 #define WASM_FEATURE(NAME, LOWER_NAME, COMPILE_PRED, COMPILER_PRED, FLAG_PRED, \
                      SHELL, PREF)                                              \
-  bool useWasm##NAME = Preferences::GetBool(JS_OPTIONS_DOT_STR PREF);
+  bool useWasm##NAME = Preferences::GetBool(JS_OPTIONS_DOT_STR "wasm_" PREF);
   JS_FOR_WASM_FEATURES(WASM_FEATURE, WASM_FEATURE)
 #undef WASM_FEATURE
 
